first few explorings

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +34,450 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stakeholder\n",
+    "Timothy Stevens: Owns expensive houses in the center, needs to get rid, best timing within a year, open for renovation when profits rise."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/King_County_House_prices_dataset.csv\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Understanding the data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 21597 entries, 0 to 21596\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   id             21597 non-null  int64  \n",
+      " 1   date           21597 non-null  object \n",
+      " 2   price          21597 non-null  float64\n",
+      " 3   bedrooms       21597 non-null  int64  \n",
+      " 4   bathrooms      21597 non-null  float64\n",
+      " 5   sqft_living    21597 non-null  int64  \n",
+      " 6   sqft_lot       21597 non-null  int64  \n",
+      " 7   floors         21597 non-null  float64\n",
+      " 8   waterfront     19221 non-null  float64\n",
+      " 9   view           21534 non-null  float64\n",
+      " 10  condition      21597 non-null  int64  \n",
+      " 11  grade          21597 non-null  int64  \n",
+      " 12  sqft_above     21597 non-null  int64  \n",
+      " 13  sqft_basement  21597 non-null  object \n",
+      " 14  yr_built       21597 non-null  int64  \n",
+      " 15  yr_renovated   17755 non-null  float64\n",
+      " 16  zipcode        21597 non-null  int64  \n",
+      " 17  lat            21597 non-null  float64\n",
+      " 18  long           21597 non-null  float64\n",
+      " 19  sqft_living15  21597 non-null  int64  \n",
+      " 20  sqft_lot15     21597 non-null  int64  \n",
+      "dtypes: float64(8), int64(11), object(2)\n",
+      "memory usage: 3.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()\n",
+    "# waterfront and yr_renovated contain NAs\n",
+    "# date needs to be converted\n",
+    "# Better description of columns can be found here: https://geodacenter.github.io/data-and-lab/KingCounty-HouseSales2015/\n",
+    "# Info on Zipcodes: https://gis-kingcounty.opendata.arcgis.com/datasets/zipcodes-for-king-county-and-surrounding-area-shorelines-zipcode-shore-area/explore?location=47.504243%2C-121.477600%2C8.67\n",
+    "# sqft_living15 is the avarage size of living space of the closest 15 neighbours. Will help to determine if a house is bigger compared to neighbors.\n",
+    "# view - An index from 0 to 4 of how good the view of the property was\n",
+    "\n",
+    "#condition - An index from 1 to 5 on the condition of the apartment,\n",
+    "\n",
+    "#grade - An index from 1 to 13, where 1-3 falls short of building construction and design, 7 has an average level of construction and design, and 11-13 have a high quality level of construction and design."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>sqft_living</th>\n",
+       "      <th>sqft_lot</th>\n",
+       "      <th>floors</th>\n",
+       "      <th>waterfront</th>\n",
+       "      <th>view</th>\n",
+       "      <th>...</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sqft_above</th>\n",
+       "      <th>sqft_basement</th>\n",
+       "      <th>yr_built</th>\n",
+       "      <th>yr_renovated</th>\n",
+       "      <th>zipcode</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>sqft_living15</th>\n",
+       "      <th>sqft_lot15</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1162</th>\n",
+       "      <td>1247600105</td>\n",
+       "      <td>10/20/2014</td>\n",
+       "      <td>5110000.000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5.250</td>\n",
+       "      <td>8010</td>\n",
+       "      <td>45517</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5990</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>98033</td>\n",
+       "      <td>47.677</td>\n",
+       "      <td>-122.211</td>\n",
+       "      <td>3430</td>\n",
+       "      <td>26788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3910</th>\n",
+       "      <td>9808700762</td>\n",
+       "      <td>6/11/2014</td>\n",
+       "      <td>7060000.000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.500</td>\n",
+       "      <td>10040</td>\n",
+       "      <td>37325</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7680</td>\n",
+       "      <td>2360.0</td>\n",
+       "      <td>1940</td>\n",
+       "      <td>2001.000</td>\n",
+       "      <td>98004</td>\n",
+       "      <td>47.650</td>\n",
+       "      <td>-122.214</td>\n",
+       "      <td>3930</td>\n",
+       "      <td>25449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4407</th>\n",
+       "      <td>2470100110</td>\n",
+       "      <td>8/4/2014</td>\n",
+       "      <td>5570000.000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5.750</td>\n",
+       "      <td>9200</td>\n",
+       "      <td>35069</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6200</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>98039</td>\n",
+       "      <td>47.629</td>\n",
+       "      <td>-122.233</td>\n",
+       "      <td>3560</td>\n",
+       "      <td>24345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7245</th>\n",
+       "      <td>6762700020</td>\n",
+       "      <td>10/13/2014</td>\n",
+       "      <td>7700000.000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8.000</td>\n",
+       "      <td>12050</td>\n",
+       "      <td>27600</td>\n",
+       "      <td>2.500</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>3.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>8570</td>\n",
+       "      <td>3480.0</td>\n",
+       "      <td>1910</td>\n",
+       "      <td>1987.000</td>\n",
+       "      <td>98102</td>\n",
+       "      <td>47.630</td>\n",
+       "      <td>-122.323</td>\n",
+       "      <td>3940</td>\n",
+       "      <td>8800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8085</th>\n",
+       "      <td>1924059029</td>\n",
+       "      <td>6/17/2014</td>\n",
+       "      <td>4670000.000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6.750</td>\n",
+       "      <td>9640</td>\n",
+       "      <td>13068</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4820</td>\n",
+       "      <td>4820.0</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>2009.000</td>\n",
+       "      <td>98040</td>\n",
+       "      <td>47.557</td>\n",
+       "      <td>-122.210</td>\n",
+       "      <td>3270</td>\n",
+       "      <td>10454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9245</th>\n",
+       "      <td>9208900037</td>\n",
+       "      <td>9/19/2014</td>\n",
+       "      <td>6890000.000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7.750</td>\n",
+       "      <td>9890</td>\n",
+       "      <td>31374</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>8860</td>\n",
+       "      <td>1030.0</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>98039</td>\n",
+       "      <td>47.630</td>\n",
+       "      <td>-122.240</td>\n",
+       "      <td>4540</td>\n",
+       "      <td>42730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12764</th>\n",
+       "      <td>1225069038</td>\n",
+       "      <td>5/5/2014</td>\n",
+       "      <td>2280000.000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8.000</td>\n",
+       "      <td>13540</td>\n",
+       "      <td>307752</td>\n",
+       "      <td>3.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9410</td>\n",
+       "      <td>4130.0</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>98053</td>\n",
+       "      <td>47.667</td>\n",
+       "      <td>-121.986</td>\n",
+       "      <td>4850</td>\n",
+       "      <td>217800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14542</th>\n",
+       "      <td>2303900035</td>\n",
+       "      <td>6/11/2014</td>\n",
+       "      <td>2890000.000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6.250</td>\n",
+       "      <td>8670</td>\n",
+       "      <td>64033</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>4.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>6120</td>\n",
+       "      <td>2550.0</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>98177</td>\n",
+       "      <td>47.730</td>\n",
+       "      <td>-122.372</td>\n",
+       "      <td>4140</td>\n",
+       "      <td>81021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18288</th>\n",
+       "      <td>6072800246</td>\n",
+       "      <td>7/2/2014</td>\n",
+       "      <td>3300000.000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6.250</td>\n",
+       "      <td>8020</td>\n",
+       "      <td>21738</td>\n",
+       "      <td>2.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11</td>\n",
+       "      <td>8020</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>98006</td>\n",
+       "      <td>47.568</td>\n",
+       "      <td>-122.189</td>\n",
+       "      <td>4160</td>\n",
+       "      <td>18969</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id        date       price  bedrooms  bathrooms  sqft_living  \\\n",
+       "1162   1247600105  10/20/2014 5110000.000         5      5.250         8010   \n",
+       "3910   9808700762   6/11/2014 7060000.000         5      4.500        10040   \n",
+       "4407   2470100110    8/4/2014 5570000.000         5      5.750         9200   \n",
+       "7245   6762700020  10/13/2014 7700000.000         6      8.000        12050   \n",
+       "8085   1924059029   6/17/2014 4670000.000         5      6.750         9640   \n",
+       "9245   9208900037   9/19/2014 6890000.000         6      7.750         9890   \n",
+       "12764  1225069038    5/5/2014 2280000.000         7      8.000        13540   \n",
+       "14542  2303900035   6/11/2014 2890000.000         5      6.250         8670   \n",
+       "18288  6072800246    7/2/2014 3300000.000         5      6.250         8020   \n",
+       "\n",
+       "       sqft_lot  floors  waterfront  view  ...  grade  sqft_above  \\\n",
+       "1162      45517   2.000       1.000 4.000  ...     12        5990   \n",
+       "3910      37325   2.000       1.000 2.000  ...     11        7680   \n",
+       "4407      35069   2.000       0.000 0.000  ...     13        6200   \n",
+       "7245      27600   2.500       0.000 3.000  ...     13        8570   \n",
+       "8085      13068   1.000       1.000 4.000  ...     12        4820   \n",
+       "9245      31374   2.000       0.000 4.000  ...     13        8860   \n",
+       "12764    307752   3.000       0.000 4.000  ...     12        9410   \n",
+       "14542     64033   2.000       0.000 4.000  ...     13        6120   \n",
+       "18288     21738   2.000       0.000 0.000  ...     11        8020   \n",
+       "\n",
+       "       sqft_basement yr_built  yr_renovated  zipcode    lat     long  \\\n",
+       "1162          2020.0     1999         0.000    98033 47.677 -122.211   \n",
+       "3910          2360.0     1940      2001.000    98004 47.650 -122.214   \n",
+       "4407          3000.0     2001           NaN    98039 47.629 -122.233   \n",
+       "7245          3480.0     1910      1987.000    98102 47.630 -122.323   \n",
+       "8085          4820.0     1983      2009.000    98040 47.557 -122.210   \n",
+       "9245          1030.0     2001         0.000    98039 47.630 -122.240   \n",
+       "12764         4130.0     1999         0.000    98053 47.667 -121.986   \n",
+       "14542         2550.0     1965           NaN    98177 47.730 -122.372   \n",
+       "18288            0.0     2001           NaN    98006 47.568 -122.189   \n",
+       "\n",
+       "       sqft_living15  sqft_lot15  \n",
+       "1162            3430       26788  \n",
+       "3910            3930       25449  \n",
+       "4407            3560       24345  \n",
+       "7245            3940        8800  \n",
+       "8085            3270       10454  \n",
+       "9245            4540       42730  \n",
+       "12764           4850      217800  \n",
+       "14542           4140       81021  \n",
+       "18288           4160       18969  \n",
+       "\n",
+       "[9 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#df.hist(column=[\"price\",\"bedrooms\",\"sqft_living\",\"floors\",\"grade\",\"yr_built\",\"yr_renovated\",\"sqft_living15\"],layout=(4,2),figsize=(12,6))\n",
+    "\n",
+    "# There are a few very big very very expensive houses\n",
+    "# Filter them for a first glance\n",
+    "\n",
+    "#df[df.price < 4000000].hist(column=[\"price\",\"bedrooms\",\"sqft_living\",\"floors\",\"grade\",\"yr_built\",\"yr_renovated\",\"sqft_living15\"],layout=(4,2),figsize=(12,6))\n",
+    "\n",
+    "# There seem to be some houses that are very high cost and/or high number of bedrooms, very high number of sqft_living. Maybe outliers? need to check.\n",
+    "# Most houses have not been renovated which is sometimes a 0 and sometimes NaN !\n",
+    "\n",
+    "df[df.price > 7000000]\n",
+    "# 45 houses over 3 million\n",
+    "# 2 houses over 7 million\n",
+    "\n",
+    "df[df.bedrooms > 10]\n",
+    "# 2 houses with more than 10 bedrooms, 33 bedrooms one is probably a typo because it is not too big.\n",
+    "\n",
+    "df[df.sqft_living > 8000]\n",
+    "# 211 houses with over 5k sqft living\n",
+    "# 9 houses with over 8k sqft living. all with high grade and a high price so probably valid data.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -41,8 +486,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.8"
   },
   "orig_nbformat": 4
  },
