--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -122,6 +122,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Research questions + hypotheses and Todo\n",
+    "Stakeholder: Timothy Stevens: Owns expensive houses in the center, needs to get rid, best timing within a year, open for renovation when profits rise.\n",
+    "\n",
+    "Question: When is the best timing to sell houses?\n",
+    "Hypothesis: The avarage price varies over the year\n",
+    "\n",
+    "Question: Will a recent renovation increase the selling price?\n",
+    "Hypothesis: Houses renovated in the same year have a higher avarage price.\n",
+    "\n",
+    "For the EDA:\n",
+    "1. Filter for houses in the center (by zipcode?). What is the center? Seattle?\n",
+    "2. Define 'expensive' (80% quartile?)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
@@ -472,10 +493,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[98001,\n",
+       " 98002,\n",
+       " 98003,\n",
+       " 98004,\n",
+       " 98005,\n",
+       " 98006,\n",
+       " 98007,\n",
+       " 98008,\n",
+       " 98010,\n",
+       " 98011,\n",
+       " 98014,\n",
+       " 98019,\n",
+       " 98022,\n",
+       " 98023,\n",
+       " 98024,\n",
+       " 98027,\n",
+       " 98028,\n",
+       " 98029,\n",
+       " 98030,\n",
+       " 98031,\n",
+       " 98032,\n",
+       " 98033,\n",
+       " 98034,\n",
+       " 98038,\n",
+       " 98039,\n",
+       " 98040,\n",
+       " 98042,\n",
+       " 98045,\n",
+       " 98052,\n",
+       " 98053,\n",
+       " 98055,\n",
+       " 98056,\n",
+       " 98058,\n",
+       " 98059,\n",
+       " 98065,\n",
+       " 98070,\n",
+       " 98072,\n",
+       " 98074,\n",
+       " 98075,\n",
+       " 98077,\n",
+       " 98092,\n",
+       " 98102,\n",
+       " 98103,\n",
+       " 98105,\n",
+       " 98106,\n",
+       " 98107,\n",
+       " 98108,\n",
+       " 98109,\n",
+       " 98112,\n",
+       " 98115,\n",
+       " 98116,\n",
+       " 98117,\n",
+       " 98118,\n",
+       " 98119,\n",
+       " 98122,\n",
+       " 98125,\n",
+       " 98126,\n",
+       " 98133,\n",
+       " 98136,\n",
+       " 98144,\n",
+       " 98146,\n",
+       " 98148,\n",
+       " 98155,\n",
+       " 98166,\n",
+       " 98168,\n",
+       " 98177,\n",
+       " 98178,\n",
+       " 98188,\n",
+       " 98198,\n",
+       " 98199]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Zip codes for seattle\n",
+    "sorted(df.zipcode.unique())\n",
+    "\n",
+    "# Seattle Zipcodes range from 98101-98199 (only 64 are taken)(https://www.zipcode.com.ng/2022/12/seattle-zip-codes-wa.html)"
+   ]
   },
   {
    "cell_type": "code",
